--- a/src/gulizsancaktar.html
+++ b/src/gulizsancaktar.html
@@ -68,6 +68,7 @@
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
+									<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
                                 </ul>
                             </li>
                           
@@ -252,6 +253,7 @@ Böyle bir sevmek görülmemiştir.<br/>
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
+						<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
