--- a/src/nilgundurak.html
+++ b/src/nilgundurak.html
@@ -68,6 +68,7 @@
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
+									<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
                                 </ul>
                             </li>
                           
@@ -146,9 +147,70 @@ Tren, düdüğünü çala çala yoluna deva ediyordu. Ahmet Bey sıkıntıyla ca
       </div>
   </div>
 
-   
-    <footer>
-        
+  
+ <footer>
+        <div class="container">
+            <div class="col-md-2 col-sm-6">
+                <div class="footer-item">
+                    <h2>TAKILAR</h2>
+                    <ul>
+                        <li><a href="gunselicepni.html">-  Günseli Çepni</a></li>
+                        <li><a href="sukrangozler.html">-  Şükran Gözler</a></li>
+                        <li><a href="takilar.html">- Semra Aydın</a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="footer-item">
+                    <h2>RESİM</h2>
+                    <ul>
+                        <li><a href="nesecan.html">-  Neşe Can</a></li>
+                        <li><a href="nesemercantopcu.html">-  Neşe Mercan Topcu</a></li>
+                        <li><a href="reyhantopaloglu.html">-  Reyhan Topaloğlu</a></li>
+						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
+						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
+						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
+						<li><a href="berrinyigitgurkan.html">-  Berrin Yiğit Gürkan</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="footer-item">
+                    <h2>EL İŞLERİ</h2>
+                    <ul>
+                        <li><a href="emineatar.html">-  Emine Atar</a></li>
+                        <li><a href="gulizsancaktar.html">-  Güliz Sancaktar</a></li>
+                        <li><a href="esrameric.html">-  Esra Meriç</a></li>
+                        <li><a href="semrakolat.html">-  Semra Kolat</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="footer-item">
+                    <h2>DİĞERLERİ</h2>
+                    <ul>
+                        <li><a href="zafercan.html">-  Zafer Can</a></li>
+                        <li><a href="arkunaydin.html">-  Arkun Aydın</a></li>
+                        <li><a href="nilgundurak.html">-  Nilgün Durak</a></li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="footer-item">
+                    <h2>HAKKIMIZDA</h2>
+                    <p>Semra'nın Sayfaları birbirinden güzel işlerin yer aldığı Semra Aydın ve dostlarının hobi sitesidir.</p>
+                    <ul class="social-icons">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 
 
