--- a/src/fotograf.html
+++ b/src/fotograf.html
@@ -67,6 +67,7 @@
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
+									<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
                                 </ul>
                             </li>
                           
@@ -316,6 +317,7 @@
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
+						<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
