--- a/src/esrameric.html
+++ b/src/esrameric.html
@@ -96,7 +96,7 @@
 					<h2>Esra Meriç ile Amigurimi</h2>
 						<h3>Hakkında</h3>
                     <div class="text">
-            <p>Kocaeli doğumlu olan arkadaşımız çeşitli hobilerinin yanı sıra  amigurimi oyuncaklar yapmaya başlamış, yaptıkları o kadar  beğenilmiş ki ders vererek hocalık yapmaya başlamıştır. Kendisi bir kız evlat sahibidir.</p>
+            <p>İstanbul doğumlu olan arkadaşımız çeşitli hobilerinin yanı sıra  amigurimi oyuncaklar yapmaya başlamış, yaptıkları o kadar  beğenilmiş ki ders vererek hocalık yapmaya başlamıştır. Kendisi bir kız evlat sahibidir.</p>
                     </div>
                 </div>
             <div class="col-md-1">
