--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 		 <link rel="stylesheet" href="css/style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+		<meta name="google-site-verification" content="WV9BeIF0upDm0EPi74MzjKGvanIjlakN8OHPuJ9M7VY" />
 		<meta name=”description” content=”Semra Aydın ve dostlarının hazırlamış olduğu takılar, resimler, el işleri gibi çeşitli hobiler yer almaktadır. ” />
         <meta name=”keywords” content=”takılar, resimler, el işleri, fotoğraf, çizimler” />
         <meta name=”author” content=”Semra Aydın” />
