Yigit değiştirildi. Eryigit oldu.

--- a/src/berrineryigitgurkan.html
+++ b/src/berrineryigitgurkan.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="css/tooplate-style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+		<meta name="google-site-verification" content="WV9BeIF0upDm0EPi74MzjKGvanIjlakN8OHPuJ9M7VY" />
 		<meta name=”description” content=”Semra Aydın ve dostlarının hazırlamış olduğu takılar, resimler, el işleri gibi çeşitli hobiler yer almaktadır. ” />
         <meta name=”keywords” content=”el işleri, amigurimi, oyuncak, örgü, oyuncak yapımı” />
         <meta name=”author” content=”Semra Aydın” />
@@ -68,7 +69,7 @@
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
-									<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+									<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
                                 </ul>
                             </li>
                           
@@ -84,7 +85,7 @@
     <div class="heading-page">
         <div class="container">
             <div class="col-md-12">
-                <h2>Berrin Yiğit Gürkan</h2>
+                <h2>Berrin Eryiğit Gürkan</h2>
                 <div class="line-dec"></div>
 			</div>
         </div>
@@ -92,7 +93,7 @@
 <div class="services">
          <div class="container">
                  <div class="col-md-8">
-                         <h2>Berrin Yiğit Gürkan</h2>
+                         <h2>Berrin Eryiğit Gürkan</h2>
                            <h3>Hakkında</h3>
                           <p> Emekli olduktan sonra resim çalışmalarına hız veren arkadaşımız, birbirinden güzel çalışmalarını bu sayfada sergilemiştir. Kendisi evli ve iki evlat sahibidir.</p></div>
                   <div class="col-md-1"></div>
@@ -244,7 +245,7 @@
                     <ul>
                         <li><a href="gunselicepni.html">-  Günseli Çepni</a></li>
                         <li><a href="sukrangozler.html">-  Şükran Gözler</a></li>
-                        <li><a href="takilar.html">- Semra Aydın</a></li>
+                        <li><a href="takilar.html">-  Semra Aydın</a></li>
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
@@ -259,7 +260,7 @@
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-						<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+						<li><a href="berrineryigitgurkan.html">-  Berrin Eryiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
