--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@ https://www.tooplate.com/view/2112-brunch
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
-									<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+									<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
                                 </ul>
                             </li>
                           
@@ -467,10 +467,10 @@ https://www.tooplate.com/view/2112-brunch
 		   <div class="col-md-3">
 		       <div class="service-item">
                     <div class="text">
-                         <h4>Berrin Yiğit Gürkan</h4>
+                         <h4>Berrin Eryiğit Gürkan</h4>
                         <p>Birbirinden güzel resimleriyle arkadaşımız Berrin...</p><br/>
 						<div class="blue1-border-button">
-                                <a href="berrinyigitgurkan.html">Devamı</a>
+                                <a href="berrineryigitgurkan.html">Devamı</a>
                             </div>
                     </div>
                 </div>
@@ -503,7 +503,7 @@ https://www.tooplate.com/view/2112-brunch
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-						<li><a href="berrinyigitgurkan.html">-  Berrin Yiğit Gürkan</a></li>
+						<li><a href="berrineryigitgurkan.html">-  Berrin Eryiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
