--- a/src/afisdavetiye.html
+++ b/src/afisdavetiye.html
@@ -18,7 +18,8 @@ d
         <link rel="stylesheet" href="css/tooplate-style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-		      <meta name=”description” content=”Semra Aydın illütrasyon, photoshop ve fireworks gibi proğramlar kullanareak hazırladığı afiş, davetiye, kartvizit gibi çalışmalar bu sayfada yer almaktadıe    ” />
+		<meta name="google-site-verification" content="WV9BeIF0upDm0EPi74MzjKGvanIjlakN8OHPuJ9M7VY" />
+		 <meta name=”description” content=”Semra Aydın illütrasyon, photoshop ve fireworks gibi proğramlar kullanareak hazırladığı afiş, davetiye, kartvizit gibi çalışmalar bu sayfada yer almaktadıe    ” />
         <meta name=”keywords” content=”takılaar, resimler, el işleri, fotoğraf, çizimler” />
         <meta name=”author” content=”Semra Aydın” />
         <meta name=”owner” content=”Semranın Sayfaları” />
@@ -68,7 +69,7 @@ d
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
-									<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+									<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
                                 </ul>
                             </li>
                           
@@ -255,7 +256,7 @@ Seni hayallerine ulaştıracak en önemli şey, cesaretindir.</p></center>
                     <ul>
                         <li><a href="gunselicepni.html">-  Günseli Çepni</a></li>
                         <li><a href="sukrangozler.html">-  Şükran Gözler</a></li>
-                        <li><a href="takilar.html">- Semra Aydın</a></li>
+                        <li><a href="takilar.html">-  Semra Aydın</a></li>
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
@@ -270,7 +271,7 @@ Seni hayallerine ulaştıracak en önemli şey, cesaretindir.</p></center>
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-						<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+						<li><a href="berrineryigitgurkan.html">-  Berrin Eryiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
