--- a/src/arkunaydin.html
+++ b/src/arkunaydin.html
@@ -18,7 +18,8 @@
         <link rel="stylesheet" href="css/tooplate-style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-		 <meta name=”description” content=”Arkun Aydın hazırlamış olduğu animasyonları ve resimleri Semranın Safalarında yer almaktadır. ” />
+		<meta name="google-site-verification" content="WV9BeIF0upDm0EPi74MzjKGvanIjlakN8OHPuJ9M7VY" />
+		<meta name=”description” content=”Arkun Aydın hazırlamış olduğu animasyonları ve resimleri Semranın Safalarında yer almaktadır. ” />
         <meta name=”keywords” content=”Animasyon, karakalem,  animasyon çalışmaları,  star craft” />
         <meta name=”author” content=”Semra Aydın” />
         <meta name=”owner” content=”Semranın Sayfaları” />
@@ -68,7 +69,7 @@
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
-									<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+								    <li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
                                 </ul>
                             </li>
                           
@@ -223,7 +224,7 @@
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-						<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+						<<li><a href="berrineryigitgurkan.html">-  Berrin Eryiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
