--- a/src/nesecan.html
+++ b/src/nesecan.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="css/tooplate-style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+		<meta name="google-site-verification" content="WV9BeIF0upDm0EPi74MzjKGvanIjlakN8OHPuJ9M7VY" />
 		<meta name=”description” content=”Küçük yaşlardan beri resşm yapmayı seven Neşe Can, yağlı boya, karakalem. akrelik resimleri bu sayfada yayınlanmaktadır. ” />
         <meta name=”keywords” content=”yağlı boya, resimler, akrilik, tablo, karakalem” />
         <meta name=”author” content=”Semra Aydın” />
@@ -68,7 +69,7 @@
 											<li><a href="nedretkir.html">Nedret Kır</a></li>
 											<li><a href="semrakolat.html">Semra Kolat</a></li>
 											<li><a href="arkunaydin.html">Arkun Aydın</a></li>
-											<li><a href="berrinyigitgurkan.html">-  Berrin Yiğit Gürkan</a></li>
+											<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
 										</ul>
 									</li>
 								  
@@ -347,7 +348,7 @@ Aşk; bir bakıma sobaya dokunmak gibidir. Bir defa yanarsın, izi kalır. Sonra
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-						<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+						<li><a href="berrineryigitgurkan.html">-  Berrin Eryiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
