--- a/src/resimler.html
+++ b/src/resimler.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="css/tooplate-style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+		<meta name="google-site-verification" content="WV9BeIF0upDm0EPi74MzjKGvanIjlakN8OHPuJ9M7VY" />
 		<meta name=”description” content=”Semra Aydın'ın kurslara gittiğinde yapmış olduğu yağlı bya resimleri kendi web sitesi olan Semranın Sayfalarında yer almaktadır.  yer almaktadır. ” />
         <meta name=”keywords” content=” resimler, yağlı boya, sergi, resim çalışmaları, tablo” />
         <meta name=”author” content=”Semra Aydın” />
@@ -68,7 +69,7 @@
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
-									<li><a href="berrinyigitgurkan.html">-  Berrin Yiğit Gürkan</a></li></ul>
+									<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
                             </li>
                           
                             <li><a href="iletisim.html">İletişim</a></li>
@@ -247,7 +248,7 @@ Auguste Renoir.
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-						<li><a href="berrinyigitgurkan.html">Berrin Yiğit Gürkan</a></li>
+						<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
                     </ul>
                 </div>
             </div>
