analitic kodu ilave etmek

--- a/src/afisdavetiye.html
+++ b/src/afisdavetiye.html
@@ -246,7 +246,16 @@ Seni hayallerine ulaştıracak en önemli şey, cesaretindir.</p></center>
             </div>
         </div>
     </div>
-   
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
+
 
   <footer>
         <div class="container">
