--- a/src/arkunaydin.html
+++ b/src/arkunaydin.html
@@ -198,7 +198,16 @@
 		</div>
  </div>
 
-   
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
+ 
 
   
     <footer>
