--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,15 @@ https://www.tooplate.com/view/2112-brunch
             </div>
         </div>
     </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
 
 
  <footer>
