--- a/src/nilgundurak.html
+++ b/src/nilgundurak.html
@@ -147,6 +147,15 @@ Tren, düdüğünü çala çala yoluna deva ediyordu. Ahmet Bey sıkıntıyla ca
 			
       </div>
   </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
 
   
  <footer>
