--- a/src/resimler.html
+++ b/src/resimler.html
@@ -224,6 +224,15 @@ Auguste Renoir.
 						  <center><p>Sergide</p></center>
 				    </div>
 		</div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
 		
      <footer>
         <div class="container">
