--- a/src/semrakolat.html
+++ b/src/semrakolat.html
@@ -202,8 +202,17 @@
                         
                   </div>
          </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
- < <footer>
+  gtag('config', 'UA-28371322-1');
+</script>
+
+  <footer>
         <div class="container">
             <div class="col-md-2 col-sm-6">
                 <div class="footer-item">
