--- a/src/suheylasancaktar.html
+++ b/src/suheylasancaktar.html
@@ -329,7 +329,17 @@
                         </div>
                   </div>
          </div>
- < <footer>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
+       
+  <footer>
         <div class="container">
             <div class="col-md-2 col-sm-6">
                 <div class="footer-item">
