--- a/src/selmatombaloglu.html
+++ b/src/selmatombaloglu.html
@@ -189,7 +189,7 @@
                 <div class="service-item"><img src="images/selma/genç-kız.jpg" alt="Genç kız"/></div>
                  <center><p>Düşünen genç kız</p></center>
                   </div>
-          <div class="col-md-4">
+                  <div class=""></div>
                 <div class="service-item"><img src="images/selma/sepetli-cocuk.jpg" alt=""/></div>
                 <center><p>Sepetli çocuk</p></center>
 		 </div>
