--- a/src/selmatombaloglu.html
+++ b/src/selmatombaloglu.html
@@ -210,7 +210,7 @@
           </div>
          
           <div class="col-md-4">
-				  <img src="images/selma/naturmont.jpg" alt="Natürmont resim"/></div>
+              <div class="service-item"> <img src="images/selma/naturmont.jpg" alt="Natürmont resim"/></div>
                   <center><p>Natürmont</p></center>
           </div>
            
