--- a/src/nedretkir.html
+++ b/src/nedretkir.html
@@ -198,7 +198,7 @@
     <div class="col-md-4"> </div>
       <div class="col-md-4">
        <div class="service-item"><img src="images/nedret/çocuk.jpg" alt="Güzel bir çocuk"/></div>
-            <center><p><bir kız çocuğu></p></center>
+            <center><p>Bir kız çocuğu></p></center>
     </div>
 </div>
 </div>
