Yanlış resim eklenmiş

--- a/src/nedretkir.html
+++ b/src/nedretkir.html
@@ -189,17 +189,13 @@
 
 <div class="services">
     <div class="container">
-         
+     <div class="col-md-4"> </div>   
      <div class="col-md-4">
                <div class="service-item"><img src="images/nedret/kanarya.jpg" alt="Güzel bir kanarya "/> </div>
                <center><p>Kanarya</p></center>
       </div>
-    
     <div class="col-md-4"> </div>
-      <div class="col-md-4">
-       <div class="service-item"><img src="images/nedret/çocuk.jpg" alt="Güzel bir çocuk"/></div>
-            <center><p>Bir kız çocuğu></p></center>
-    </div>
+
 </div>
 </div>
 
