Bir resim ilave edilmesi

--- a/src/nesecan.html
+++ b/src/nesecan.html
@@ -177,7 +177,7 @@
 			<div class="container"> 
             <div class="col-md-3">  <div class="service-item"> <img src="images/nese/karakalem7.jpg" alt="Kız çocuğu"/>
 						</div><center><p>Kız çocuğu resmi</p></center></div>
-				  <div class="col-md-6"><p>Aynı günde dört mevsime şahit olmak gibi bir şey bu. Önce özlüyor, sonra ağlıyor, akşamları küsüyor, geceleri çok seviyorum.<br/><b> Özdemir Asaf</b><br/>
+				  <div class="col-md-3"><p>Aynı günde dört mevsime şahit olmak gibi bir şey bu. Önce özlüyor, sonra ağlıyor, akşamları küsüyor, geceleri çok seviyorum.<br/><b> Özdemir Asaf</b><br/>
 
 Ben utangaç bir kalbi taşırım geceden. Ben sana aşık olduğumu, ölsem söyleyemem.<br/><b> Özdemir Asaf</b><br/>
 
@@ -186,9 +186,11 @@ Aşk; bir bakıma sobaya dokunmak gibidir. Bir defa yanarsın, izi kalır. Sonra
 Öyle bir zamanda gel ki, vazgeçmek mümkün olmasın.''<br/> <b>Orhan Veli Kanık</b></p><br/>
 				
                         </div>
-                  	<div class="col-md-3">  <div class="service-item"> <img src="images/nese/karakalem11.jpg" alt="Kız çocuğu"/>
+               <div class="col-md-3">  <div class="service-item"> <img src="images/nese/karakalem11.jpg" alt="Kız çocuğu"/>
 						</div><center><p>Kız çocuğu resmi</p></center></div>
-
+               <div class="col-md-3"> 
+                    <div class="service-item"> <img src="images/nese/çocuk.jpg" alt="Kız çocuğu"/>
+						</div><center><p>Kız çocuğu resmi</p></center></div>
 		 </div>
    </div>
 	
