Ata Ruacan ilavesi

--- a/src/esrameric.html
+++ b/src/esrameric.html
@@ -70,6 +70,7 @@
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
 									<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
+									<li><a href="ataruacan.html">Ata Ruacan</a></li>
                                 </ul>
                             </li>
                           
@@ -546,6 +547,7 @@ Aysel git başımdan seni seviyorum...<br/>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
 						<li><a href="berrineryigitgurkan.html">- Berrin Eryiğit Gürkan</a></li>
+						<li><a href="ataruacan.html">-  Ata Ruacan</a></li>
                     </ul>
                 </div>
             </div>
