--- a/src/takilar.html
+++ b/src/takilar.html
@@ -69,7 +69,8 @@
 									<li><a href="nedretkir.html">Nedret Kır</a></li>
 									<li><a href="semrakolat.html">Semra Kolat</a></li>
 									<li><a href="arkunaydin.html">Arkun Aydın</a></li>
-									<li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
+                                    <li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
+                                    <li><a href="ataruacan.html">Ata Ruacan</a></li>
                                 </ul>
                             </li>
                           
@@ -398,7 +399,8 @@
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-						<li><a href="berrineryigitgurkan.html">- Berrin Eryiğit Gürkan</a></li>
+                        <li><a href="berrineryigitgurkan.html">- Berrin Eryiğit Gürkan</a></li>
+                        <li><a href="ataruacan.html">-  Ata Ruacan</a></li>
                     </ul>
                 </div>
             </div>
