--- a/src/zafercan.html
+++ b/src/zafercan.html
@@ -370,7 +370,7 @@
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
                         <li><a href="berrineryigitgurkan.html">-  Berrin Eryiğit Gürkan</a></li>
-                        <li><a href="ataruacan.html">-  Ata Ruacan</a></li>
+                        <li><a href="ataruacan.html">-  Ata Ruacan/a></li>
                     </ul>
                 </div>
             </div>
