--- a/src/ataruacan.html
+++ b/src/ataruacan.html
@@ -174,7 +174,7 @@
          </div>
          <div class="col-md-3">
         	<div class="service-item">
-       	   <img src="images/Ata/mavi_seramik.jpg" alt="Mavili"/></div>
+       	   <img src="images/Ata/mavi_seramik.jpg" alt="Mavili kaseler"/></div>
 					<center><p>Mavi seramikler</p></center> </div>
            <div class="col-md-3">
             <div class="service-item">
