Heading-page düzeltmesi

--- a/src/gulizsancaktar.html
+++ b/src/gulizsancaktar.html
@@ -99,16 +99,23 @@
             </div>
         </header>
     </div>
-
+    <div class="heading-page">
+            <div class="container">
+                <div class="col-md-12">
+                    <h2>Güliz Sancaktar</h2>
+                    <div class="line-dec"></div>
+                </div>
+            </div>
+        </div>
     <div class="services">
         <div class="container">
             <div class="col-md-8">
 						<h1>Güliz Sancaktar</h1>
 							<h2>Hakkında</h2>
 							 <p> İstanbul doğumlu olan Güliz Sancaktar çok yönlü kişiliğinin yanı sıra hobisi olan nakış işlerini çok sevmekte, birbirinden güzel işleri çıkartmaktadır. Yaptıklarını aşağıda görmektesiniz. Ayrıca çiçeklere de önem veren Güliz Sancaktar tetaryum yetiştiriciği de yapmaktadır. </p>
-							<div class="text">
-        </div>
-                </div>
+                           
+             </div>
+                
             <div class="col-md-1">
              </div>
 				<div class="col-md-3">
@@ -116,7 +123,7 @@
  
             </div>
         </div>
-         <div class="services">
+      <div class="services">
                <div class="container">
                <h3>El İşleri</h3>
                <p>Goblen işi yapmak Güliz Sancaktar için çok önemlidir.  Özel iplerle tablo gibi kumaş her yeri  nakışlanır. Güzel bir iş çıkar. Artık duvara asılmanın vakti gelmiştir.</p>
