heading-page düzeltmesi

--- a/src/nilgundurak.html
+++ b/src/nilgundurak.html
@@ -98,9 +98,10 @@
                 </div>
             </div>
         </header>
-    </div>g-page">
-        <div class="container">
-            <div class="col-md-12">
+    </div>
+    <div class="heading-page">
+          <div class="container">
+             <div class="col-md-12">
                 <h2>Nilgün Durak</h2>
                 <div class="line-dec"></div>
             </div>
