--- a/src/index.html
+++ b/src/index.html
@@ -605,6 +605,7 @@ https://www.tooplate.com/view/2112-brunch
                 <p>Copyright &copy; 2019 Semra'nın Sayfaları
                 
                 - Dizayn: <a rel="nofollow" href="https://www.semraninayfalari.com">Semra Aydın</a></p>
+				    <a href="#" class="js-backtotop">Başa Dönün</a>
             </div>
         </div>
     </div>
