--- a/src/zafercan.html
+++ b/src/zafercan.html
@@ -436,6 +436,7 @@
                 
                 - Dizayn: <a rel="nofollow" href="https://www.semraninayfalari.com">Semra Aydın</a></p>
             </div>
+			    <a href="#" class="js-backtotop">Başa Dönün</a>
         </div>
     </div>
 
