--- a/src/ataruacan.html
+++ b/src/ataruacan.html
@@ -404,16 +404,16 @@
     </footer>
 
 
-    <div class="sub-footer">
+       <div class="sub-footer">
         <div class="container">
             <div class="col-md-12">
                 <p>Copyright &copy; 2019 Semra'nın Sayfaları
-
-                    - Dizayn: <a rel="nofollow" href="https://www.semraninayfalari.com">Semra Aydın</a></p>
+                
+                - Dizayn: <a rel="nofollow" href="https://www.semraninayfalari.com">Semra Aydın</a></p>
             </div>
+			    <a href="#" class="js-backtotop">Başa Dönün</a>
         </div>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
