--- a/src/nedretkir.html
+++ b/src/nedretkir.html
@@ -347,14 +347,14 @@ anneler gibi ağlamanın yiğitliğine?<br/>
         </div>
     </footer>
 
-
- <div class="sub-footer">
+   <div class="sub-footer">
         <div class="container">
             <div class="col-md-12">
                 <p>Copyright &copy; 2019 Semra'nın Sayfaları
                 
                 - Dizayn: <a rel="nofollow" href="https://www.semraninayfalari.com">Semra Aydın</a></p>
             </div>
+			    <a href="#" class="js-backtotop">Başa Dönün</a>
         </div>
     </div>
 
