--- a/src/semrakolat.html
+++ b/src/semrakolat.html
@@ -296,13 +296,14 @@
             </div>
         </div>
     </footer>
- <div class="sub-footer">
+   <div class="sub-footer">
         <div class="container">
             <div class="col-md-12">
                 <p>Copyright &copy; 2019 Semra'nın Sayfaları
                 
                 - Dizayn: <a rel="nofollow" href="https://www.semraninayfalari.com">Semra Aydın</a></p>
             </div>
+			    <a href="#" class="js-backtotop">Başa Dönün</a>
         </div>
     </div>
 
