--- a/src/resimler.html
+++ b/src/resimler.html
@@ -262,7 +262,7 @@ Auguste Renoir.
                         <li><a href="gunselicepni.html">-  Günseli Çepni</a></li>
                         <li><a href="sukrangozler.html">-  Şükran Gözler</a></li>
                         <li><a href="takilar.html">- Semra Aydın</a></li>
-                        <li><a href="#"></a></li>
+                        
                     </ul>
                 </div>
             </div>
@@ -276,7 +276,7 @@ Auguste Renoir.
 						<li><a href="suheylasancaktar.html">-  Süheyla Sancaktar</a></li>
 						<li><a href="nedretkir.html">-  Nedret Kır</a></li>
 						<li><a href="selmatombaloglu.html">-  Selma Tombaloğlu</a></li>
-                        <li><a href="berrineryigitgurkan.html">Berrin Eryiğit Gürkan</a></li>
+                        <li><a href="berrineryigitgurkan.html">-  Berrin Eryiğit Gürkan</a></li>
                         <li><a href="ataruacan.html">-  Ata Ruacan</a></li>
                     </ul>
                 </div>
