--- a/src/siteler.html
+++ b/src/siteler.html
@@ -165,7 +165,7 @@
           		 <div class="service-item"> <a href="https://celikanmuhendislik.com/"><img src="images/siteler/celikanmuhendislik.jpg" alt=""/></a></div>
 						<center><p>Çelikan Mühendislik</p></center>
 				 </div>
-                 <div class="col-md-3"><a href="gulserendelibas-yedek/index.html" title="Gülseren" target="_blank">Gulseren Delibas</a></div>
+                 <div class="col-md-3"><a href="gulserendelibas-yedek/index.html" target="_blank">Gülderen Delibas</a></div>
       </div>  
       
       
