--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@ https://www.tooplate.com/view/2112-brunch
                         <div class="col-md-6">
                             <h2 class="hidden-sm hidden-xs">Diğer <br>Hobileri</h2>
                             <h2 class="hidden-lg hidden-md">Semra Aydın ve arkadaşlarının</h2>
-                            <span>Semra Aydın''ın kişisel gayretleriyle bilgisayar çalışmalarını aşağıda sergilemektedir.</span>
+                            <span>Semra Aydın'ın kişisel gayretleriyle bilgisayar çalışmalarını aşağıda sergilenmektedir.</span>
                             <p>Photoshop, fireworks, illütrasyon proğramlarıyla yapılan işler burada... </p> <br />
 							 <p>Html, css, notepat ++, dreamweawer, wordpress...gibi bilgiler...</p> 
                             <p>.</p>
