--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@ https://www.tooplate.com/view/2112-brunch
                 <div class="col-md-12">
                     <button id="primary-nav-button" type="button">Menu</button>
                     <div class="logo">
-                        <a href="index.html"><img src="img/white-logo.png" alt="Brunch Template"></a>
+                        <a href="index.html"><img src="img/white-logo.png" alt="Semra'nın Sayfaları"></a>
                     </div>
                     <nav id="primary-nav" class="dropdown cf">
                         <ul class="dropdown menu">
