--- a/src/gulserendelibas-yedek/siirkitaplari.html
+++ b/src/gulserendelibas-yedek/siirkitaplari.html
@@ -1,9 +1,3 @@
-<!--
-author: W3layouts
-author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +20,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
+<!-- Start WOWSlider.com HEAD section -->
+<link rel="stylesheet" type="text/css" href="slider/engine1/style.css" />
+<script type="text/javascript" src="slider/engine1/jquery.js"></script>
+<!-- End WOWSlider.com HEAD section -->
 	
 </head>
 <body>
@@ -41,16 +39,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
 				<li class="active"><a href="index.html">Anasayfa</a></li>
-				<li class=""><a href="hakkinda.html">Hakkında</a></li>
+					<li class="dropdown"><a href="#">Gülseren Delibaş <i class="icon-angle-right"></i></a>
+                        <ul class="dropdown-menu sub-menu">
+							<li class=""><a href="hakkinda.html">Hakkında</a></li>
+								<li class=""><a href="sergiler.html">Sergiler</a></li>
+								<li class=""><a href="fuarlar.html">Fuarlar</a></li>
+									<li class=""><a href="basinda.html">Basında</a></li>
+                         </ul>
+					 </li>
+				
 				<li class="dropdown"><a href="#">Kitaplar <i class="icon-angle-right"></i></a>
                         <ul class="dropdown-menu sub-menu">
-                          <li><a href="cocukkitaplari.html"> ÇocukKitapları</a></li>
+                          <li><a href="cocukkitaplari.html"> Çocuk Kitapları</a></li>
                           <li><a href="genckitaplari.html">Genç Kitapları</a></li>
-						  <li><a href="yetiskinkitaplari.html">Yetişkin Kitapları</a></li>
-                          <li><a href="siirkitaplari.html">Şiir Kitapları</a></li>
+				          <li><a href="siirkitaplari.html">Şiir Kitapları</a></li>
                      </ul>
-					 </li>
-				<li class=""><a href="sergiler.html">Sergiler</a></li>
+			 </li>
 				<li class=""><a href="galeri.html">Galeri</a></li>
 				<li class=""><a href="iletisim.html">İletişim</a></li>
 			</ul>
@@ -81,7 +85,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="col-sm-5 grids-img-left">
 							<img src="images/siir_firardacocukluk.jpg" alt="" class="img-fluid">
 						</div>
-						<div class="col-sm-7 right-cont">
+						<div class="col-md-2"></div>
+						<div class="col-sm-5 right-cont">
 							<h3 class="mb-2 let mt-sm-0 mt-2 tm-clr">Firarda Çocukluk</h3>
 							<p class="mt-3">İçinde yetmişsekiz adet şiirler bulunan bu güzel kitaba ulaşmak isteyeceksiniz.</p>
 						</div>
@@ -93,23 +98,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 <!-- //places -->
-
+<!-- places -->
+<section class="trav-grids py-5" id="desti">
+	<div class="container py-xl-5 py-lg-3">
+		<h3 class="heading text-capitalize text-center mb-lg-5 mb-4"> Şiirlerinden Örnekler</h3>
+		<div class="row">
+			<div class="col-lg-4 mt-4"><b>Zerafet Tılsımı</b><br/><br/>
+	deli yağmurlu bir sonbaharda<br/>uyandım zerafet tılsımıyla<br/>kardelenler sarmaladı ruhumu <br/> ufaldım çakıl taşlarına doldum<br/>aşk patiasına doğru<br/><br/><br/>kayboldu halkalanmış acılar<br/>zamanın buğusuyla <br/>yanağıma konan buseydi<br/> bana sunulan<br/> gecenin fosforunda</div>
+			
+            <div class="col-lg-4 mt-4"><b>Emektar Yürek</b><br/><br/>
+			eskitemez adımı asırlar <br/>silinse de mezar taşım<br/> sabır çeşmemden <br/> süzüldğ has bahçeme<br/> emektar yüreğimden <br/> akan sırlarım <br/></div>
+			   <div class="col-lg-4 mt-4"><b>Çalar Saatin Böylesine</b><br/> <br/>sabahın ilk işikları<br/> yalarken penceremi <br/> düğün vardı <br/> çam ağacında <br/><br/><br/> tutturdular<br/> tatlı bir melodi <br/> cıvıl cıvıl sesleriyle<br/><br/><br/>mümkün  mü uyumak<br/> mest etti  beni <br/> can kurban  olsun<br/> çalar saatin böylesine<br/></div>
+		</div>
+	</div></div>
+</section>
 <!-- //places -->
-<!-- //text -->
-<section class="trav-grids py-12" id="desti">
-	<div class="container py-xl-12 py-lg-12">
-	<br/>
-	<center><h5>ÇocuklaşanSokak</h5><br/>
-	
-<p>
-	Keşke<br/> Hep çocuk kalsaydım<br/> Üflesydim sevgiyi<br/> Rengarenk balonlarıma<br/><br/>Kardeşlik adına<br/> Keşke Süslesydim<br/> Renkli rüyalarımı <br/>Özgürlük adına.<br/> Keşke<br/><br/> Umudun ziline bassaydım<br/> Çocuklaşan sokağımda<br/> Barış adına.
-	
-</p></center><br/><br/><br/>
-	
-	
-	</div><br/>
-	</section>
-<!-- text sonu-->
+<!-- places -->
+<section class="trav-grids py-5" id="desti">
+	<div class="container py-xl-5 py-lg-3">
+		<div class="row">
+			<div class="col-lg-4 mt-4"></div>
+	       <div class="col-lg-4 mt-4"><b>Merdivenli Sokak</b><br/> <br/>geçmiş zamanın kokusuyla dolu<br/> merdivenli sokağım <br/><br/> sevgiyi bölüşen çocuklarla çocuklaşır<br/> gençleşirim aşka koşan gençlerle<br/> kahırlarını toplarım yaşlıların<br/><br/><br/>el etek çekiince<br/> yorgunluğumu atarım<br/>ağlayan bulutlarla<br/></div>
+		</div>
+		<div class="col-lg-4 mt-4"></div>
+	</div></div>
+</section>
+<!-- //places -->
+<!-- //places -->
+
 <!-- places -->
 
 
@@ -120,9 +136,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <section class="footer footer_w3layouts_section_1its py-5">
 	<div class="container py-lg-4 py-3">
 		<div class="row footer-top">
-			
-			
-			<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
+		<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
 					<div class="footer-title">
 						<h3>Hakkında</h3>
 					</div>
