--- a/src/gulserendelibas-yedek/cocukkitaplari.html
+++ b/src/gulserendelibas-yedek/cocukkitaplari.html
@@ -1,15 +1,3 @@
-<!--
-author: W3layouts
-author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!--
-author: W3layouts
-author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,6 +20,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
+<!-- Start WOWSlider.com HEAD section -->
+<link rel="stylesheet" type="text/css" href="slider/engine1/style.css" />
+<script type="text/javascript" src="slider/engine1/jquery.js"></script>
+<!-- End WOWSlider.com HEAD section -->
 	
 </head>
 <body>
@@ -47,16 +39,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
 				<li class="active"><a href="index.html">Anasayfa</a></li>
-				<li class=""><a href="hakkinda.html">Hakkında</a></li>
+					<li class="dropdown"><a href="#">Gülseren Delibaş <i class="icon-angle-right"></i></a>
+                        <ul class="dropdown-menu sub-menu">
+							<li class=""><a href="hakkinda.html">Hakkında</a></li>
+								<li class=""><a href="sergiler.html">Sergiler</a></li>
+								<li class=""><a href="fuarlar.html">Fuarlar</a></li>
+									<li class=""><a href="basinda.html">Basında</a></li>
+                         </ul>
+					 </li>
+				
 				<li class="dropdown"><a href="#">Kitaplar <i class="icon-angle-right"></i></a>
                         <ul class="dropdown-menu sub-menu">
-                          <li><a href="cocukkitaplari.html"> ÇocukKitapları</a></li>
+                          <li><a href="cocukkitaplari.html"> Çocuk Kitapları</a></li>
                           <li><a href="genckitaplari.html">Genç Kitapları</a></li>
-						  <li><a href="yetiskinkitaplari.html">Yetişkin Kitapları</a></li>
-                          <li><a href="siirkitaplari.html">Şiir Kitapları</a></li>
+				          <li><a href="siirkitaplari.html">Şiir Kitapları</a></li>
                      </ul>
-					 </li>
-				<li class=""><a href="sergiler.html">Sergiler</a></li>
+			 </li>
 				<li class=""><a href="galeri.html">Galeri</a></li>
 				<li class=""><a href="iletisim.html">İletişim</a></li>
 			</ul>
@@ -65,6 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </header>
 <!-- //header -->
+
 
 <!-- banner -->
 <section class="banner_inner" id="home">
@@ -179,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="row">
 						<div class="col-sm-5 grids-img-left">
 							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr"></h4>
-							<img src="images/singapore.jpg" alt="" class="img-fluid">
+							<img src="images/çocukkitapları_Teomanınakordionu.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-sm-7 right-cont">
 							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Teoman'ın Akordeonu</h4>
@@ -189,20 +188,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 		</div>
-		<div class="row pt-lg-3">
 			<div class="col-lg-6 mt-4">
 				<div class="grids-tem-one">
 					<div class="row">
-						<div class="col-sm-5 grids-img-left"><img src="images/.jpg" width="350" height="400" alt=""/>
-							<img src="images/malaysia.jpg" alt="" class="img-fluid">
+						<div class="col-sm-5 grids-img-left">
+							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr"></h4>
+								<img src="images/cocukkitapları_alyayazsevinci.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-sm-7 right-cont">
 							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Alya'nın Yaz Sevinci</h4>
 							<p class="mt-3">Yaz Sevinci, Okul Ödevi, Babaya Özlem,Aşıyla Sınav bu güzel öyküler de bu kitabın içerisinde..</p>
-						</div>
+						
 					</div>
 				</div>
 			</div>
+		</div>
+		
 			<div class="col-lg-6 mt-4">
 				<div class="grids-tem-one">
 					<div class="row">
