--- a/src/gulserendelibas-yedek/genckitaplari.html
+++ b/src/gulserendelibas-yedek/genckitaplari.html
@@ -1,9 +1,3 @@
-<!--
-author: W3layouts
-author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +20,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
+<!-- Start WOWSlider.com HEAD section -->
+<link rel="stylesheet" type="text/css" href="slider/engine1/style.css" />
+<script type="text/javascript" src="slider/engine1/jquery.js"></script>
+<!-- End WOWSlider.com HEAD section -->
 	
 </head>
 <body>
@@ -41,16 +39,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
 				<li class="active"><a href="index.html">Anasayfa</a></li>
-				<li class=""><a href="hakkinda.html">Hakkında</a></li>
+					<li class="dropdown"><a href="#">Gülseren Delibaş <i class="icon-angle-right"></i></a>
+                        <ul class="dropdown-menu sub-menu">
+							<li class=""><a href="hakkinda.html">Hakkında</a></li>
+								<li class=""><a href="sergiler.html">Sergiler</a></li>
+								<li class=""><a href="fuarlar.html">Fuarlar</a></li>
+									<li class=""><a href="basinda.html">Basında</a></li>
+                         </ul>
+					 </li>
+				
 				<li class="dropdown"><a href="#">Kitaplar <i class="icon-angle-right"></i></a>
                         <ul class="dropdown-menu sub-menu">
-                          <li><a href="cocukkitaplari.html"> ÇocukKitapları</a></li>
+                          <li><a href="cocukkitaplari.html"> Çocuk Kitapları</a></li>
                           <li><a href="genckitaplari.html">Genç Kitapları</a></li>
-						  <li><a href="yetiskinkitaplari.html">Yetişkin Kitapları</a></li>
-                          <li><a href="siirkitaplari.html">Şiir Kitapları</a></li>
+				          <li><a href="siirkitaplari.html">Şiir Kitapları</a></li>
                      </ul>
-					 </li>
-				<li class=""><a href="sergiler.html">Sergiler</a></li>
+			 </li>
 				<li class=""><a href="galeri.html">Galeri</a></li>
 				<li class=""><a href="iletisim.html">İletişim</a></li>
 			</ul>
@@ -59,7 +63,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </header>
 <!-- //header -->
-
 
 
 <!-- banner -->
