--- a/src/gulserendelibas-yedek/index.html
+++ b/src/gulserendelibas-yedek/index.html
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				Çocukları çok sevmesi onu, meslek seçiminde öğretmenliğe itti.  Emekli olduktan sonra da çocuklara yararlı olmak için öyküler yazmaya başladı. Kendisinin  birçok  kitabı vardır.Bu site onun kitaplarını içermektedir. </p>
 				
 			</div>
-			<div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5 
+			<div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5" >
 				<img src="images/about.jpg" alt="" class="img-fluid abt-image" />
 			</div>
 		</div>
@@ -149,9 +149,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-3 col-sm-6">
+			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/p2.jpg" alt="" class="img-fluid" />		
+					<img src="images/cocukkitapları_alyayazsevinci.jpg" alt="" class="img-fluid" />		
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Alya Yaz Sevinci</h6>
@@ -159,24 +159,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/p3.jpg" alt="" class="img-fluid" />
-				</div>
+					<img src="images/çocukkitapları_Alyayolculukheyacanı.jpg">
 				<div class="package-info">
 					<h6 class="mt-1">Alya'nın Yolculuk Heyecanı</h6>
-				</div>
+				</div></div>
 			</div>
 				<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/p3.jpg" alt="" class="img-fluid" />
+					<img src="images/çocukkitapları_alyaduslerdunyası.jpg" alt="" class="img-fluid" />
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Alya Düşler Dünyasında</h6>
 				</div>
 			</div>
-		
-	</div>
-	</div>
-	</div>
 </section>
 <!-- tour packages -->
 
@@ -189,7 +184,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row">
 				<div class="col-lg-3 col-sm-4">
 				<div class="image-tour position-relative">
-					<img src="images/kimliğimicalamazsın.jpg" alt="" class="img-fluid" />		
+					<img src="images/çocukkitapları_yiğitinöcukböcuk.jpg"  alt="" class="img-fluid" />		
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Yiğit'in Öcük ile Böcük'ü</h6>
@@ -197,15 +192,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		<div class="col-lg-3 col-sm-4">
 				<div class="image-tour position-relative">
-					<img src="images/nutuk.jpg" alt="" class="img-fluid" />
+					<img src="images/çocukkitapları_yiğitincimcimesi.jpg"  alt="" class="img-fluid" />
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"Yiğit'in Sevimli Cimcimesi</h6>
+					<h6 class="mt-1">Yiğit'in Sevimli Cimcimesi</h6>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/yumuklasan.jpg" alt="" class="img-fluid" />
+					<img src="images/çocukkitapları_yigitizcikampında1.jpg"alt="" class="img-fluid" />
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Yiğit İzci Kampında</h6>
@@ -214,7 +209,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 				<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/yumuklasan.jpg" alt="" class="img-fluid" />
+					<img src="images/cocukkitapları_yiğitinbulutlarlayolculuğu.jpg" alt="" class="img-fluid" />
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Yiğit'in Bulutlarla Yolculuğu</h6>
@@ -230,15 +225,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row">
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/nutuk.jpg" alt="" class="img-fluid" />
+					<img src="images/çocukkitapları_pırtık.jpg" alt="" class="img-fluid" />
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Pırtık ile Tırtık</h6>
 				</div>
 			</div>
 		<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
-				<div class="image-tour position-relative">
-					<img src="images/sevgininsihirligücü1.jpg" alt="" class="img-fluid" />
+				<div class="image-tour position-relative"><img src="images/çocukkitapları_yasamasevincinin.jpg"  alt="" class="img-fluid" />
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Yaşama Sevincinin Zaferi</h6>
@@ -248,16 +242,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			<div class="col-lg-3 col-sm-4">
 				<div class="image-tour position-relative">
-					<img src="images/kimliğimicalamazsın.jpg" alt="" class="img-fluid" />		
+					<img src="images/galeri_sevgininsihirligücü2.jpg"  alt="" class="img-fluid" />		
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Sevginin Sihirli Gücü</h6>
 				</div>
 			</div>
 
-				<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
+				<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5"> 
 				<div class="image-tour position-relative">
-					<img src="images/yumuklasan.jpg" alt="" class="img-fluid" />
+					 <img src="images/galeri_kimliğimiçalamazsın2.jpg" alt="" class="img-fluid" />
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1">Kimliğimi Çalamazsın</h6>
@@ -343,23 +337,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="counter">
 					<p class="count-text ">Alya'nın Kardan Adamı-Alya Düşler Dünyasında </p>
 					<div class="timer count-title count-number">1000+</div>
-						<p class="count-text text-uppercase">Öğretmenler Dün. Mat.Çıktı</p>
-					<p class="count-text text-uppercase">Kültür Bak. 400 adet satın aldı </p>
+						<p class="count-text ">Öğretmenler Dün. Mat.Çıktı</p>
+					<p class="count-text">Kültür Bak. 400 adet satın aldı </p>
 				</div>
 			</div>
 				<div class="col-lg-4 col-6">
 				<div class="counter">
 					<p class="count-text ">Yiğit’in Bulutlarla Yolculuğu, Yiğit’in Öcük ile Böcüğü, Yiğit’in Cimcimesi ve Yiğit İzci Kampında</p>
 					<div class="timer count-title count-number">1000+</div>
-					<p class="count-text text-uppercase">Öğretmenler Dün. Mat. Çıktı</p>
-					<p class="count-text text-uppercase">Kültür Bak. 400 adet satın aldı </p>
+					<p class="count-text">Öğretmenler Dün. Mat. Çıktı</p>
+					<p class="count-text">Kültür Bak. 400 adet satın aldı </p>
 				</div>
 			</div>
 		<div class="col-lg-4 col-6">
 				<div class="counter">
 				<p class="count-text ">Pırtık ile Tırtık, Teoman’ın Akordeonu, Yaşama Sevincinin Zaferi, Kimliğimi Çalamazsın ve Sevginin Sihirli Gücü </p>
 					<div class="timer count-title count-number">1000+</div>
-					<p class="count-text text-uppercase">Malatya Yılmaz Ma. Çıktı.</p>
+					<p class="count-text">Malatya Yılmaz Ma. Çıktı.</p>
 				</div>
 			</div>
 		</div><br/><br/><br/>
@@ -368,25 +362,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="counter">
 				<p class="count-text">Atatürk ve Kurtuluş Savaşı, Atatürk ve Nutuk </p>
 					<div class="timer count-title count-number">1000+</div>
-					<p class="count-text text-uppercase">Öztepe Mat. Çıktı</p>
+					<p class="count-text">Öztepe Mat. Çıktı</p>
 				</div>
 			</div>
 				<div class="col-lg-4 col-6">
-				<div class="counter-text">Yumuklaşan Yaşam</p>
+                	<div class="counter">
+				<p class="count-text">Yumuklaşan Yaşam</p>
 					<div class="timer count-title count-number">100 +</div>
-					<p class="count-text text-uppercase">Öztepe Mat.Çıktı</p>
-					<p class="count-text text-uppercase">Kültür Bak. 100 adet  satın aldı</p>
+					<p class="count-text ">Öztepe Mat.Çıktı</p>
+					<p class="count-text">Kültür Bak. 100 adet  satın aldı</p>
 				</div>
 			</div>
 		<div class="col-lg-4 col-6">
 				<div class="counter">
 				<p class="count-text">Firarda Çocukluk </p>
 					<div class="timer count-title count-number">1000+</div>
-					<p class="count-text text-uppercase">Ekinos Yay. Çıktı</p>
-						<p class="count-text text-uppercase">Kültür Bak. 100 adet  satın aldı</p>
+					<p class="count-text">Ekinos Yay. Çıktı</p>
+						<p class="count-text">Kültür Bak. 100 adet  satın aldı</p>
 				</div>
 			</div>
-		</div>
 	</div>
 	</section><br/>
 
