Arkun Aydın başlığın düzeltilmesi

--- a/src/arkunaydin.html
+++ b/src/arkunaydin.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="utf-8">
-  <title>Arkun Aydın</title>
+  <title>Animasyon</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="google-site-verification" content="WV9BeIF0upDm0EPi74MzjKGvanIjlakN8OHPuJ9M7VY" />
   <meta name=”description” content=”Semra Aydın ve dostlarının hazırlamış olduğu takılar, resimler, el işleri gibi çeşitli hobiler yer almaktadır. ” />
