--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
               <div class="slider-content text-center">   <br/><br/><br/><br/><br/><br/>  <br/><br/><br/>
                 <!-- layer 1 -->
                 <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">Bilgisayar programları ile hazırlanan fotograf manipulasyonları, afiş, davetiye, kartvizit çalışmaları, çizimler, animasyonlar </h2>
+                  <h2 class="title1">Bilgisayar programları ile hazırlanan fotograf manipulasyonları, afiş, davetiye, kartvizit çalışmaları, çizimler, animasyonlar ve site örnekleri</h2>
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
@@ -211,7 +211,7 @@
               <div class="slider-content">   <br/><br/><br/><br/><br/><br/>  <br/><br/><br/>
                 <!-- layer 1 -->
                 <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">Güfte ve şarkılarla site örnekleri hepsi burada </h2>
+                  <h2 class="title1">Kitap tanıtımı, güfte ve şarkılarının tanıtımı hepsi burada </h2>
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
