--- a/src/iletisim.html
+++ b/src/iletisim.html
@@ -259,6 +259,43 @@
                 </div></div><br/><br/>
        <div class="row">
 
+          <!-- Start contact icon column -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="contact-icon text-center">
+              <div class="single-icon">
+                <i class="fa fa-mobile"></i>
+                <p>
+                 0 534 597 02 19<br>
+              
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Start contact icon column -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="contact-icon text-center">
+              <div class="single-icon">
+                <i class="fa fa-envelope-o"></i>
+                <p>
+                  Email: semraydin@windowslive.com<br>
+                  <span>Web: www.semraninsayfalari.com</span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Start contact icon column -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="contact-icon text-center">
+              <div class="single-icon">
+                <i class="fa fa-map-marker"></i>
+                <p>
+                İzmit<br>
+                  <span>KOCAELİ</span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
           <!-- Start  contact -->
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="form contact-form">
@@ -391,6 +428,16 @@
   <script src="contactform/contactform.js"></script>
 
   <script src="js/main.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
+
 </body>
 
 </html>
