--- a/src/suheylasancaktar.html
+++ b/src/suheylasancaktar.html
@@ -991,6 +991,16 @@ Kedili tabak
   <script src="contactform/contactform.js"></script>
 
   <script src="js/main.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-28371322-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28371322-1');
+</script>
+
 </body>
 
 </html>
